SDIT-2607: 🐛 Fix display of migration properties and test

--- a/server/views/pages/visitbalance/visitBalanceMigration.njk
+++ b/server/views/pages/visitbalance/visitBalanceMigration.njk
@@ -71,8 +71,7 @@
                           <div class="govuk-grid-row govuk-!-margin-bottom-2">
                             <div class="govuk-grid-column-full">
                               <a data-qa="progress-link" class="govuk-link"
-                                 href="/visit-balance-migration/details?migrationId={{ u.migrationId }}">View
-                                progress</a>
+                                 href="/visit-balance-migration/details?migrationId={{ u.migrationId }}">View progress</a>
                             </div>
                           </div>
                         {% endif %}
@@ -99,8 +98,7 @@
                           {% if u.recordsFailed > 0 %}
                             <div class="govuk-grid-column-one-third">
                               <a data-qa="failures-link" class="govuk-link"
-                                 href="/visit-balance-migration/failures?migrationId={{ u.migrationId }}">View
-                                failures</a>
+                                 href="/visit-balance-migration/failures?migrationId={{ u.migrationId }}">View failures</a>
                             </div>
                           {% endif %}
                         </div>
