--- a/server/views/pages/contactperson/profiledetails/startContactPersonProfileDetailsMigrationConfirmation.njk
+++ b/server/views/pages/contactperson/profiledetails/startContactPersonProfileDetailsMigrationConfirmation.njk
@@ -1,4 +1,4 @@
-{% extends "../../partials/layout.njk" %}
+{% extends "../../../partials/layout.njk" %}
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
