--- a/server/views/pages/contactperson/profiledetails/startContactPersonProfileDetailsMigrationPreview.njk
+++ b/server/views/pages/contactperson/profiledetails/startContactPersonProfileDetailsMigrationPreview.njk
@@ -1,4 +1,4 @@
-{% extends "../../partials/layout.njk" %}
+{% extends "../../../partials/layout.njk" %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
