SDIT-2648: ✨ Prevent duplicate migrations of the same type

--- a/server/views/pages/activities/startActivitiesMigrationPreview.njk
+++ b/server/views/pages/activities/startActivitiesMigrationPreview.njk
@@ -161,6 +161,7 @@
                                 name: "action",
                                 value: "startMigration",
                                 attributes: { 'data-qa': 'start-migration-button' }
+                                preventDoubleClick: true,
                             }) }}
                             <a class="govuk-link" href="/activities-migration">Cancel</a>
                         </div>
