--- a/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
+++ b/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
@@ -110,6 +110,7 @@
                                 name: "action",
                                 value: "startMigration",
                                 attributes: { 'data-qa': 'start-migration-button' }
+                                preventDoubleClick: true,
                             }) }}
                             <a class="govuk-link" href="/appointments-migration">Cancel</a>
                         </div>
