--- a/server/views/pages/visits/startVisitsMigrationPreview.njk
+++ b/server/views/pages/visits/startVisitsMigrationPreview.njk
@@ -113,6 +113,7 @@
                                 name: "action",
                                 value: "startMigration",
                                 attributes: { 'data-qa': 'start-migration-button' }
+                                preventDoubleClick: true,
                             }) }}
                             <a class="govuk-link" href="/visits-migration">Cancel</a>
                         </div>
