--- a/server/views/pages/contactperson/profiledetails/startContactPersonProfileDetailsMigrationPreview.njk
+++ b/server/views/pages/contactperson/profiledetails/startContactPersonProfileDetailsMigrationPreview.njk
@@ -89,6 +89,7 @@
                                 name: "action",
                                 value: "startMigration",
                                 attributes: { 'data-qa': 'start-migration-button' }
+                                preventDoubleClick: true,
                             }) }}
                             <a class="govuk-link" href="/contactperson-profiledetails-migration">Cancel</a>
                         </div>
