--- a/server/views/pages/coreperson/startCorePersonMigrationPreview.njk
+++ b/server/views/pages/coreperson/startCorePersonMigrationPreview.njk
@@ -90,6 +90,7 @@
                                 name: "action",
                                 value: "startMigration",
                                 attributes: { 'data-qa': 'start-migration-button' }
+                                preventDoubleClick: true,
                             }) }}
                             <a class="govuk-link" href="/coreperson-migration">Cancel</a>
                         </div>
