--- a/server/views/pages/visitbalance/startVisitBalanceMigrationPreview.njk
+++ b/server/views/pages/visitbalance/startVisitBalanceMigrationPreview.njk
@@ -91,6 +91,7 @@
                 name: "action",
                 value: "startMigration",
                 attributes: { 'data-qa': 'start-migration-button' }
+                preventDoubleClick: true,
               }) }}
               <a class="govuk-link" href="/visit-balance-migration">Cancel</a>
             </div>
