SDIT-2648: ✨ Prevent duplicate migrations of the same type (second time lucky)

--- a/server/views/pages/contactperson/startContactPersonMigrationPreview.njk
+++ b/server/views/pages/contactperson/startContactPersonMigrationPreview.njk
@@ -89,8 +89,8 @@
                                 text: "Start migration",
                                 name: "action",
                                 value: "startMigration",
-                                attributes: { 'data-qa': 'start-migration-button' }
-                                preventDoubleClick: true,
+                                attributes: { 'data-qa': 'start-migration-button' },
+                                preventDoubleClick: true
                             }) }}
                             <a class="govuk-link" href="/contactperson-migration">Cancel</a>
                         </div>
