--- a/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
+++ b/server/views/pages/appointments/startAppointmentsMigrationPreview.njk
@@ -109,8 +109,8 @@
                                 text: "Start migration",
                                 name: "action",
                                 value: "startMigration",
-                                attributes: { 'data-qa': 'start-migration-button' }
-                                preventDoubleClick: true,
+                                attributes: { 'data-qa': 'start-migration-button' },
+                                preventDoubleClick: true
                             }) }}
                             <a class="govuk-link" href="/appointments-migration">Cancel</a>
                         </div>
