--- a/server/views/pages/visitbalance/startVisitBalanceMigrationPreview.njk
+++ b/server/views/pages/visitbalance/startVisitBalanceMigrationPreview.njk
@@ -90,8 +90,8 @@
                 text: "Start migration",
                 name: "action",
                 value: "startMigration",
-                attributes: { 'data-qa': 'start-migration-button' }
-                preventDoubleClick: true,
+                attributes: { 'data-qa': 'start-migration-button' },
+                                preventDoubleClick: true
               }) }}
               <a class="govuk-link" href="/visit-balance-migration">Cancel</a>
             </div>
