SDIT-2648: ✨ Prevent duplicate migrations of the same type (#250)

--- a/server/views/pages/contactperson/profiledetails/startContactPersonProfileDetailsMigrationPreview.njk
+++ b/server/views/pages/contactperson/profiledetails/startContactPersonProfileDetailsMigrationPreview.njk
@@ -88,7 +88,8 @@
                                 text: "Start migration",
                                 name: "action",
                                 value: "startMigration",
-                                attributes: { 'data-qa': 'start-migration-button' }
+                                attributes: { 'data-qa': 'start-migration-button' },
+                                preventDoubleClick: true
                             }) }}
                             <a class="govuk-link" href="/contactperson-profiledetails-migration">Cancel</a>
                         </div>
