--- a/server/views/pages/courtSentencing/startCourtSentencingMigrationPreview.njk
+++ b/server/views/pages/courtSentencing/startCourtSentencingMigrationPreview.njk
@@ -89,7 +89,8 @@
                                 text: "Start migration",
                                 name: "action",
                                 value: "startMigration",
-                                attributes: { 'data-qa': 'start-migration-button' }
+                                attributes: { 'data-qa': 'start-migration-button' },
+                                preventDoubleClick: true
                             }) }}
                             <a class="govuk-link" href="/court-sentencing-migration">Cancel</a>
                         </div>
