--- a/server/views/pages/visits/startVisitsMigrationPreview.njk
+++ b/server/views/pages/visits/startVisitsMigrationPreview.njk
@@ -112,7 +112,8 @@
                                 text: "Start migration",
                                 name: "action",
                                 value: "startMigration",
-                                attributes: { 'data-qa': 'start-migration-button' }
+                                attributes: { 'data-qa': 'start-migration-button' },
+                                preventDoubleClick: true
                             }) }}
                             <a class="govuk-link" href="/visits-migration">Cancel</a>
                         </div>
