--- a/server/views/pages/visits/visitsMigration.njk
+++ b/server/views/pages/visits/visitsMigration.njk
@@ -26,7 +26,7 @@
   {% endset %}
 
 
-  <div class="govuk-grid-row govuk-body">
+  <div class="govuk-width-container">
     <h1 class="govuk-heading-l">Visits migration</h1>
 
     <div>
