--- a/server/views/pages/activities/startActivitiesMigrationPreview.njk
+++ b/server/views/pages/activities/startActivitiesMigrationPreview.njk
@@ -4,19 +4,15 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 
 
 {% set pageTitle = applicationName + " - Start an activities migration - preview" %}
 {% set bodyAttributes = {'data-page': 'copy-text'} %}
+{% set backLinkHref = "/activities-migration/amend" %}
 
 {% block content %}
-    {{ govukBackLink({
-        text: "Back",
-        href: '/activities-migration/amend'
-    }) }}
 
     <main class="app-container govuk-body">
         {% if errors.length > 0 %}
