--- a/server/views/pages/appointments/appointmentsMigrationDetails.njk
+++ b/server/views/pages/appointments/appointmentsMigrationDetails.njk
@@ -1,17 +1,12 @@
 {% extends "../../partials/layout.njk" %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 
 {% set pageTitle = applicationName + " - Appointments migration details" %}
+{% set backLinkHref = "/appointments-migration" %}
 
 {% block content %}
-
-  {{ govukBackLink({
-    text: "Back",
-    href: '/appointments-migration'
-  }) }}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
