--- a/server/views/pages/contactperson/profiledetails/contactPersonProfileDetailsMigrationDetails.njk
+++ b/server/views/pages/contactperson/profiledetails/contactPersonProfileDetailsMigrationDetails.njk
@@ -1,17 +1,13 @@
 {% extends "../../../partials/layout.njk" %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
+
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 
 {% set pageTitle = applicationName + " - Contact Person Profile Details migration details" %}
+{% set backLinkHref = "/contactperson-profiledetails-migration" %}
 
 {% block content %}
-
-  {{ govukBackLink({
-    text: "Back",
-    href: '/contactperson-profiledetails-migration'
-  }) }}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
