--- a/server/views/pages/contactperson/profiledetails/startContactPersonProfileDetailsMigration.njk
+++ b/server/views/pages/contactperson/profiledetails/startContactPersonProfileDetailsMigration.njk
@@ -3,16 +3,12 @@
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
 
 {% set pageTitle = applicationName + " - Start a Contact Person Profile Details migration" %}
+{% set backLinkHref = "/contactperson-profiledetails-migration" %}
 
 {% block content %}
-  {{ govukBackLink({
-    text: "Back",
-    href: '/contactperson-profiledetails-migration'
-  }) }}
 
   <main class="app-container govuk-body">
     {% if errors.length > 0 %}
