--- a/server/views/pages/contactperson/startContactPersonMigrationConfirmation.njk
+++ b/server/views/pages/contactperson/startContactPersonMigrationConfirmation.njk
@@ -1,15 +1,10 @@
 {% extends "../../partials/layout.njk" %}
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
 {% set pageTitle = applicationName + " - Contact Person migration started" %}
+{% set backLinkHref = "/contactperson-migration" %}
 
 {% block content %}
-
-  {{ govukBackLink({
-    text: "Back",
-    href: '/contactperson-migration'
-  }) }}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
