--- a/server/views/pages/coreperson/corePersonMigrationFailures.njk
+++ b/server/views/pages/coreperson/corePersonMigrationFailures.njk
@@ -1,17 +1,12 @@
 {% extends "../../partials/layout.njk" %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 
 {% set pageTitle = applicationName + " - Core Person migration failures" %}
+{% set backLinkHref = "/coreperson-migration" %}
 
 {% block content %}
-
-  {{ govukBackLink({
-    text: "Back",
-    href: '/coreperson-migration'
-  }) }}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
