--- a/server/views/pages/corporate/corporateMigrationDetails.njk
+++ b/server/views/pages/corporate/corporateMigrationDetails.njk
@@ -1,17 +1,12 @@
 {% extends "../../partials/layout.njk" %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 
 {% set pageTitle = applicationName + " - Corporate migration details" %}
+{% set backLinkHref = "/coreperson-migration" %}
 
 {% block content %}
-
-  {{ govukBackLink({
-    text: "Back",
-    href: '/corporate-migration'
-  }) }}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
