--- a/server/views/pages/corporate/startCorporateMigration.njk
+++ b/server/views/pages/corporate/startCorporateMigration.njk
@@ -3,15 +3,11 @@
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
 {% set pageTitle = applicationName + " - Start a Corporate migration" %}
+{% set backLinkHref = "/corporate-migration" %}
 
 {% block content %}
-  {{ govukBackLink({
-    text: "Back",
-    href: '/corporate-migration'
-  }) }}
 
   <main class="app-container govuk-body">
     {% if errors.length > 0 %}
