--- a/server/views/pages/sentencing/sentencingMigration.njk
+++ b/server/views/pages/sentencing/sentencingMigration.njk
@@ -3,18 +3,13 @@
 {% from "moj/components/filter/macro.njk" import mojFilter %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
 {% set pageTitle = applicationName + " - Sentencing migration" %}
 {% set bodyAttributes = {'data-page': 'filter-toggle'} %}
+{% set backLinkHref = "/" %}
 
 {% block content %}
-  {{ govukBackLink({
-    text: "Back",
-    href: '/'
-  }) }}
-
 
   <div class="govuk-grid-row govuk-body">
     <h1 class="govuk-heading-l">Sentencing migration</h1>
