--- a/server/views/pages/visits/startVisitsMigration.njk
+++ b/server/views/pages/visits/startVisitsMigration.njk
@@ -5,16 +5,12 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 
 {% set pageTitle = applicationName + " - Start a visits migration" %}
+{% set backLinkHref = "/visits-migration" %}
 
 {% block content %}
-  {{ govukBackLink({
-    text: "Back",
-    href: '/visits-migration'
-  }) }}
 
   <main class="app-container govuk-body">
     {% if errors.length > 0 %}
