--- a/server/views/pages/visits/visitsMigration.njk
+++ b/server/views/pages/visits/visitsMigration.njk
@@ -3,18 +3,13 @@
 {% from "moj/components/filter/macro.njk" import mojFilter %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
 {% set pageTitle = applicationName + " - Visits migration" %}
 {% set bodyAttributes = {'data-page': 'filter-toggle'} %}
+{% set backLinkHref = "/" %}
 
 {% block content %}
-  {{ govukBackLink({
-    text: "Back",
-    href: '/'
-  }) }}
-
 
   {% set filterOptionsHtml %}
     <form id="filter-form" action="/visits-migration" novalidate>
@@ -26,7 +21,7 @@
   {% endset %}
 
 
-  <div class="govuk-grid-row govuk-body">
+  <div class="govuk-width-container">
     <h1 class="govuk-heading-l">Visits migration</h1>
 
     <div>
