--- a/server/views/pages/visits/roomMappingPrison.njk
+++ b/server/views/pages/visits/roomMappingPrison.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 
 {% set pageTitle = applicationName + " - Room mappings" %}
-{% set backLinkHref = "/visits-room-mappings" %}
+{% set backLinkHref = "/" %}
 
 {% block content %}
 
