--- a/server/views/pages/visits/viewRoomMappings.njk
+++ b/server/views/pages/visits/viewRoomMappings.njk
@@ -11,19 +11,16 @@
 
 {% block content %}
 
-<div class="govuk-grid-row govuk-body">
+<div class="govuk-width-container">
     <h1 class="govuk-heading-l">Room mappings - {{ prisonId }}</h1>
-
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
-
 
             {% if rooms.length %}
 
             {% set rows = [] %}
             {% for u in rooms %}
-
 
             {% set actionHtml %}
 
@@ -91,7 +88,6 @@
         </div>
     </div>
 </div>
-
 
 {% endblock %}
 
