--- a/server/views/pages/visits/startVisitsMigration.njk
+++ b/server/views/pages/visits/startVisitsMigration.njk
@@ -24,7 +24,7 @@
     <div class="govuk-width-container">
       <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
-            <h1 class="govuk-heading-l govuk-!-margin-top-7">Start a new visits migration</h1>
+            <h1 class="govuk-heading-l">Start a new visits migration</h1>
             </div>
 
             <div class="govuk-grid-column-two-thirds">
