--- a/server/views/pages/visits/addRoomMapping.njk
+++ b/server/views/pages/visits/addRoomMapping.njk
@@ -22,7 +22,7 @@
     <div class="govuk-width-container">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
-                <h1 class="govuk-heading-l>Add room mapping for NOMIS room - {{ prisonId }}</h1>
+                <h1 class="govuk-heading-l">Add room mapping for NOMIS room - {{ prisonId }}</h1>
                 <h2 class="govuk-heading-m">{{ nomisRoomDescription }}</h2>
             </div>
             <div class="govuk-grid-column-full">
