--- a/server/views/pages/activities/startActivitiesMigrationPreview.njk
+++ b/server/views/pages/activities/startActivitiesMigrationPreview.njk
@@ -141,6 +141,7 @@
 
                     {{ summaryRow(form.prisonId, "Prison code", summaryRows, "prison-id") }}
                     {{ summaryRow(form.activityStartDate, "Activity start date", summaryRows, "activity-start-date") }}
+                    {{ summaryRow(form.nomisActivityEndDate, "NOMIS activity end date", summaryRows, "nomis-activity-end-date") }}
                     {{ summaryRow(form.courseActivityId, "Single course activity to migrate", summaryRows, "course-activity-id") }}
 
                     {{ govukSummaryList({
