SDIT-2749 Remove activities missing schedule rules from migration count estimate

--- a/server/views/pages/activities/activitiesMigration.njk
+++ b/server/views/pages/activities/activitiesMigration.njk
@@ -129,7 +129,7 @@
                   {% if (u.whenEnded) and (u.recordsFailed + u.recordsMigrated < u.estimatedRecordCount) %}
                     <div class="govuk-grid-column-full">
                       <a data-qa="already-migrated-link" class="govuk-link" target="_blank"
-                         href="{{ u.appInsightsAlreadyMigratedLink }}">View already migrated activities in
+                         href="{{ u.appInsightsActivityIgnoredLink }}">View ignored activities in
                         AppInsights</a>
                     </div>
                   {% endif %}
