SDIT-2892 Rename to Prisoner Restriction

--- a/server/views/pages/contactperson/contactPersonMigration.njk
+++ b/server/views/pages/contactperson/contactPersonMigration.njk
@@ -4,13 +4,13 @@
 {% from "govuk/components/table/macro.njk" import govukTable %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
-{% set pageTitle = applicationName + " - Contact Person migration" %}
+{% set pageTitle = applicationName + " - Prisoner Restriction migration" %}
 {% set backLinkHref = "/" %}
 
 {% block content %}
 
   <div class="govuk-grid-row govuk-body">
-    <h1 class="govuk-heading-l">Contact Person migration</h1>
+    <h1 class="govuk-heading-l">Prisoner Restriction migration</h1>
 
     <div>
       {{ govukButton({
