--- a/server/views/pages/contactperson/contactPersonMigrationFailures.njk
+++ b/server/views/pages/contactperson/contactPersonMigrationFailures.njk
@@ -3,14 +3,14 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 
-{% set pageTitle = applicationName + " - Contact Person migration failures" %}
+{% set pageTitle = applicationName + " - Prisoner Restriction migration failures" %}
 {% set backLinkHref = "/contactperson-migration" %}
 
 {% block content %}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
-      <h1 class="govuk-heading-l govuk-!-margin-top-7">Contact Person migration failures</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-top-7">Prisoner Restriction migration failures</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
           <p>All records that are on the main dead letter queue are displayed. These may include records from other migration runs.
@@ -52,7 +52,7 @@
                 {{ govukDetails({
                   summaryText: "Full message",
                   text: message | json(['applicationInsightsLink'])
-                }) }}                
+                }) }}
                 </div>
               </div>
             </div>
@@ -69,7 +69,7 @@
 
           {{ govukTable({
             caption: bob,
-            captionClasses: "govuk-table__caption--m",            
+            captionClasses: "govuk-table__caption--m",
             rows: rows
           }) }}
         {% else %}
