--- a/server/views/pages/contactperson/startContactPersonMigrationConfirmation.njk
+++ b/server/views/pages/contactperson/startContactPersonMigrationConfirmation.njk
@@ -1,29 +1,29 @@
 {% extends "../../partials/layout.njk" %}
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
 
-{% set pageTitle = applicationName + " - Contact Person migration started" %}
+{% set pageTitle = applicationName + " - Prisoner Restriction migration started" %}
 {% set backLinkHref = "/contactperson-migration" %}
 
 {% block content %}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
-      <h1 class="govuk-heading-l govuk-!-margin-top-7">Contact Person migration started</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-top-7">Prisoner Restriction migration started</h1>
     </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
         {% set html %}
         <div id="confirmationMessage">
           Migration id: <strong>{{form.migrationId}}</strong><br/>
-          Estimated number of Person entities to be migrated: <strong>{{form.estimatedCount}}</strong><br/>
-        </div>  
+          Estimated number of Restriction entities to be migrated: <strong>{{form.estimatedCount}}</strong><br/>
+        </div>
         {% endset %}
 
         {{ govukPanel({
-          titleText: "Contact Person migration has successfully started",
+          titleText: "Prisoner Restriction migration has successfully started",
           html: html
         }) }}
-      </div>  
+      </div>
     </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
