--- a/server/views/pages/contactperson/startContactPersonMigrationPreview.njk
+++ b/server/views/pages/contactperson/startContactPersonMigrationPreview.njk
@@ -7,7 +7,7 @@
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 
-{% set pageTitle = applicationName + " - Start a Contact Person migration - preview" %}
+{% set pageTitle = applicationName + " - Start a Prisoner Restriction migration - preview" %}
 {% set backLinkHref = "/contactperson-migration/amend" %}
 
 {% block content %}
@@ -24,7 +24,7 @@
         <div class="govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                    <h1 class="govuk-heading-l govuk-!-margin-top-7">Start a new Contact Person migration - preview</h1>
+                    <h1 class="govuk-heading-l govuk-!-margin-top-7">Start a new Prisoner Restriction migration - preview</h1>
                 </div>
                 <div class="govuk-grid-column-two-thirds">
                     {% if form.estimatedCount %}
