Minor updates to the Visits room mapping and migration pages (#289)
* minor tweaks to improve Room mapping pages

* fixed test

* Update addRoomMappings.ts

* test fix

---------

Co-authored-by: simon.nebesnuick <simon.nebesnuick@digital.justice.gov.uk>
Co-authored-by: petergphillips <5099053+petergphillips@users.noreply.github.com>

--- a/server/views/pages/visits/addRoomMapping.njk
+++ b/server/views/pages/visits/addRoomMapping.njk
@@ -10,6 +10,7 @@
 {% block content %}
 
 <div class="app-container govuk-body">
+
     {% if errors.length > 0 %}
     {{ govukErrorSummary({
     titleText: 'There is a problem',
@@ -17,10 +18,12 @@
     attributes: { 'data-qa-errors': true }
     }) }}
     {% endif %}
+
     <div class="govuk-width-container">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
-                <h1 class="govuk-heading-m govuk-!-margin-top-7">Add room mapping for Nomis room: {{ nomisRoomDescription }} at Prison {{ prisonId }}</h1>
+                <h1 class="govuk-heading-l">Add room mapping for NOMIS room - {{ prisonId }}</h1>
+                <h2 class="govuk-heading-m">{{ nomisRoomDescription }}</h2>
             </div>
             <div class="govuk-grid-column-full">
                 <form id="mapping-form" method="post" action="/visits-room-mappings/add" novalidate>
