--- a/server/views/pages/visits/viewRoomMappings.njk
+++ b/server/views/pages/visits/viewRoomMappings.njk
@@ -10,9 +10,8 @@
 
 {% block content %}
 
-<div class="govuk-grid-row govuk-body">
+<div class="govuk-width-container">
     <h1 class="govuk-heading-l">Room mappings - {{ prisonId }}</h1>
-
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
@@ -21,7 +20,6 @@
 
             {% set rows = [] %}
             {% for u in rooms %}
-
 
             {% set actionHtml %}
 
@@ -89,7 +87,6 @@
         </div>
     </div>
 </div>
-
 
 {% endblock %}
 
